# Stereo-PCD

./: .gitignore  LICENSE  README.md  dev-requirements.txt  mypy.ini  requirements.txt  setup.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp/app/: CMakeLists.txt  main.cc
cpp/dependencies/: CMakeLists.txt
cpp/lib/: CMakeLists.txt
cpp/lib/StereoMatch/: StereoMatch.cc  StereoMatch.h  StereoMatchMultiThreads.cc  StereoMatchMultiThreads.h  StereoMatchSingleThread.cc  StereoMatchSingleThread.h
cpp/module/: CMakeLists.txt  DataTypes.cc  DataTypes.h  PythonStereoMatch.cc  PythonStereoMatch.h  StereoMatchModule.cc
cpp/scripts/: find_params_kitti.sh  find_params_mid.sh  run_on_kitti_dataset.sh  run_on_middlebury_dataset.sh
cpp/tests/: CMakeLists.txt  StereoMatchTests.cc
docs/: Doxyfile  README.md
examples/: README.md  dataset_iterator.py  pcd_from_gt_disparity.py  pcd_from_nw_disparity.py  pcd_from_sgbm_disp.py  pcd_lidar_stereo_bin.py  pcd_stereo_lidar.py  pixel_point.py
examples/evaluate/: eval_kitti_dataset.py  eval_kitti_sample.py  eval_middlebury_dataset.py  eval_middlebury_sample.py
extra/data_generator/: gen_gt.py  gen_gt2.py  gen_pair_from_gt.py
extra/ocv_matching/: opencv_bm_demo.py  opencv_sgbm_demo.py
extra/scripts/: eval_midlebury_metrics.sh  kitti_res2json.py  middlebury_csv2json.py
stereo_pcd/: geometry.py  pointclouds.py  simple_stereo.py
stereo_pcd/datasets/: dataset.py  kitti_det_dataset.py  kitti_stereo_dataset.py  middlebury_dataset.py
stereo_pcd/evaluation/: error_image.py  eval_dataset.py  eval_image.py  eval_kitti_dataset.py  eval_middlebury_dataset.py
stereo_pcd/utils/: read_pfm.py  write_pfm.py
test/: test_geometry.py  test_simple_stereo.py
